<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_button">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="settings_night">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>
    <string name="practicum_android_link">https://practicum.yandex.ru/android-developer</string>
    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="email_student">earowen@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_prompt">Поделиться c</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_net_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update_button">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="search_history_clear_button">Очистить историю</string>

    <string name="player_time_default">00:00</string>
    <string name="player_country">Страна</string>
    <string name="player_genre">Жанр</string>
    <string name="player_year">Год</string>
    <string name="player_album">Альбом</string>
    <string name="player_duration">Длительность</string>
    <string name="player_default_preview_url">https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview126/v4/48/8f/a4/488fa4b5-b606-71ee-572e-691f840503c8/mzaf_17729039194440787513.plus.aac.ep.m4a</string>
    <string name="player_add_to_playlist">Добавить в плейлист</string>
    <string name="player_service_cant_start">Невозможно запустить сервис</string>

    <string name="library_favourites_default">Ваша медиатека пуста</string>
    <string name="library_playlists_default">Вы не создали\nни одного плейлиста</string>
    <string name="library_tab1_name">Избранные треки</string>
    <string name="library_tab2_name">Плейлисты</string>
    <string name="library_new_playlist">Новый плейлист</string>
    <string name="library_create_playlist">Создать</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="playlist_create_success_toast">Плейлист %s создан успешно</string>
    <string name="playlist_update_success_toast">Плейлист %s сохранен успешно</string>
    <string name="playlist_track_add_success_toast">Добавлено в плейлист %s</string>
    <string name="playlist_track_add_fail_toast">Трек уже добавлен в плейлист %s</string>
    <string name="playlist_empty_toast">Плейлист не содержит ни одного трека</string>

    <string name="playlist_create_button">Создать</string>
    <string name="playlist_update_button">Сохранить</string>

    <string name="playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_dialog_cancel">Отмена</string>
    <string name="playlist_dialog_ok">Завершить</string>

    <string name="track_delete_dialog_title">Удалить трек</string>
    <string name="track_delete_dialog_message">Хотите удалить трек?</string>
    <string name="track_delete_dialog_cancel">Нет</string>
    <string name="track_delete_dialog_ok">Да</string>

    <string name="playlist_sharing_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_sharing">Поделиться</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>

    <string name="playlist_delete_dialog_message">Хотите удалить плейлист?</string>
    <string name="playlist_delete_dialog_cancel">Нет</string>
    <string name="playlist_delete_dialog_ok">Да</string>

    <plurals name="track_plurals">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="time_plurals">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="no_network_toast">Отсутствует подключение к интернету</string>

</resources>
