<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    tools:context=".presentation.settings.activity.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        app:titleTextAppearance="@style/toolbarStyle"
        app:title="@string/settings_button"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:titleMargins="0dp"
        />

    <FrameLayout
        style="@style/settingsFrameStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame_height"
        android:layout_marginTop="24dp"
        android:paddingEnd="15dp"
        >

        <TextView
            android:id="@+id/nightThemeTextView"
            style="@style/settingsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_night"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/nightThemeSwitch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            app:thumbTint="?attr/colorOnSecondary"
            app:trackTint="?attr/colorSecondary"
        />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareFrame"
        style="@style/settingsFrameStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame_height"
        >

        <TextView
            android:id="@+id/shareTextView"
            style="@style/settingsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_share"
            />

        <ImageView
            android:id="@+id/shareImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:srcCompat="@drawable/share"
            />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportFrame"
        style="@style/settingsFrameStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame_height"
        >

        <TextView
            android:id="@+id/supportTextView"
            style="@style/settingsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_support"
            />

        <ImageView
            android:id="@+id/supportImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:srcCompat="@drawable/support"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/usrAgrFrame"
        style="@style/settingsFrameStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame_height"
        >

        <TextView
            android:id="@+id/userAgrTextView"
            style="@style/settingsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_agreement"
            />

        <ImageView
            android:id="@+id/userAgrImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:srcCompat="@drawable/arrow_forward"
            />
    </FrameLayout>

</LinearLayout>